--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/icons-material": "^5.2.5",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-multi-carousel": "^2.8.2"
   },
   "devDependencies": {
     "eslint": "8.6.0",
